# Azure-AI-Foundry-BrandSense

./: .gitignore  LICENSE  README.md  deploy.ps1  mcp_setup.md
.github/workflows/: ci.yml  deploy.yml
agents/: __init__.py  auditor.py  briefer.py  deploy.py  researcher.py
apps/services/brandsense-api/: Dockerfile  pyproject.toml
apps/services/brandsense-api/src/: config.py  main.py  models.py
apps/services/brandsense-api/src/tools/: pymupdf.py
apps/services/brandsense-api/src/workflow/: pipeline.py
apps/ui/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  nginx.conf.template  package.json  vite.config.js
apps/ui/src/: App.jsx  theme.js
docs/: deployment_steps.md  project.md  project_development.md
infra/: locals.tf  main.tf  outputs.tf  terraform.tfvars.tpl  variables.tf
infra/modules/ai_services/: main.tf  outputs.tf  variables.tf
infra/modules/apim/: main.tf  outputs.tf  variables.tf
infra/modules/container_apps/: main.tf  variables.tf
infra/modules/key_vault/: main.tf
infra/modules/monitoring/: main.tf  outputs.tf
infra/modules/search/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  variables.tf
scripts/: Deploy-APIM-Configuration.ps1  Deploy-ContainerApps.ps1  Deploy-ContainerUI.ps1  Deploy-Containers.ps1  Deploy-Dashboards.ps1  Deploy-FoundryAgents.ps1  Deploy-Infrastructure.ps1  New-GitHubOidc.ps1  deploy_foundry_agents.py  requirements-agents.txt
scripts/common/: DeploymentFunctions.psm1
scripts/load/: guidelines.py  requirements.txt
scripts/testing/: create_test_docs.py
(+8 files in other folders)
