[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brandsense-api"
version = "0.1.0"
description = "BrandSense API — marketing asset validation service (Foundry pipeline gateway + PyMuPDF MCP tool endpoint)"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Settings / validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Azure AI
    "azure-ai-projects==2.0.0b2",
    "aiohttp>=3.9.0",
    "azure-ai-documentintelligence>=1.0.0",
    "azure-search-documents>=11.6.0",
    "azure-identity>=1.19.0",
    "openai>=1.0.0",

    # PDF extraction
    "PyMuPDF>=1.24.0",

    # Outbound HTTP
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
